# bits

./: .cljfmt.edn  .dir-locals.el  .dockerignore  .editorconfig  .env.1password  .env.example  .eslintrc.json  .gitignore  .mcp.json  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dioxus.toml  Dockerfile  LICENSE  LICENSING.org  README.md  README.org  build.clj  clippy.toml  compose.yml  deny.toml  deps-lock.json  deps.edn  devenv.nix  devenv.yaml  flake.nix  index.html  justfile  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  rustfmt.toml  seeds.toml  shell.nix  tailwind.css  tests.edn  (+1 more)
.cargo/: config.toml
.claude/: COORDINATION.md  settings.json  settings.local.json
.clj-kondo/: config.edn
.github/: FUNDING.yml
.husky/: pre-commit
.lsp/: config.edn
assets/: tailwind.css
conf/: datomic.dev.properties
crates/bits/: Cargo.toml  Dioxus.toml
crates/bits-app/: Cargo.toml
crates/bits-app/migrations/: 20251119000000_create_tenants.sql
crates/bits-app/resources/locales/en-US/: main.ftl
crates/bits-app/src/: app.rs  auth.rs  config.rs  crypto.rs  csrf.rs  db.rs  http.rs  i18n.rs  lib.rs  metrics.rs  middleware.rs  password.rs  server.rs  subdomain.rs  tenant.rs  verification.rs
crates/bits-app/src/auth/: core.rs  registration.rs  session.rs
crates/bits-app/src/auth_rate_limit/: config.rs  error.rs  mod.rs  service.rs  storage.rs  types.rs
crates/bits-app/src/components/: auth_form_fields.rs  avatar.rs  button.rs  feature_card.rs  footer.rs  header.rs  icons.rs  input.rs  mod.rs  sign_out_link.rs
crates/bits-app/src/demos/: mod.rs  template.rs
crates/bits-app/src/middleware/: auth_rate_limit.rs  csrf.rs  mod.rs  realm.rs
crates/bits-app/src/pages/: auth.rs  home.rs  join.rs  landing.rs  layout.rs  mod.rs  verify_email.rs
crates/bits-colo/: Cargo.toml  Dioxus.toml  tailwind.css
crates/bits-colo/src/: lib.rs  main.rs  server.rs
crates/bits-domain/: Cargo.toml
crates/bits-domain/src/: email.rs  id.rs  ip_address.rs  lib.rs  name.rs  password.rs  password_hash.rs  pii.rs
crates/bits-e2e/: Cargo.toml
crates/bits-e2e/src/: assertions.rs  client.rs  fixtures.rs  lib.rs  request.rs  seeds.rs  server.rs
crates/bits-e2e/tests/: auth.rs  email_verification_enforcement.rs  metrics.rs  rate_limit.rs  realm.rs  realm_solo.rs  security.rs  solo.rs
crates/bits/src/: app.rs  csrf.rs  hooks.rs  lib.rs  main.rs  metrics.rs  password.rs  server.rs  verification.rs
crates/bits/src/auth/: mod.rs  password.rs  registration.rs  session.rs  verification.rs
crates/bits/src/auth_rate_limit/: error.rs  mod.rs  service.rs  storage.rs
crates/bits/src/components/: alert.rs  button.rs  category_item.rs  footer.rs  header.rs  icons.rs  input.rs  navigation_popover.rs  sign_out_button.rs  sign_out_link.rs
crates/bits/src/demos/: charlie.rs  emporium.rs  jcf.rs  mod.rs  template.rs
crates/bits/src/middleware/: auth_rate_limit.rs  csrf.rs  metrics.rs  realm.rs
crates/bits/src/pages/: home.rs  join.rs  landing.rs  layout.rs  not_found.rs  verify_email.rs
crates/consensus/: Cargo.toml  README.md
crates/consensus/src/: chain.rs  config.rs  lib.rs  registry.rs  service.rs  token.rs
crates/crypto/: Cargo.toml  README.md
crates/identity/: Cargo.toml  README.md
crates/identity/src/: did.rs  keys.rs  lib.rs  store.rs  username.rs
crates/network/: Cargo.toml  README.md
crates/node/: Cargo.toml  build.rs
crates/node/src/: main.rs  templates.rs
crates/rpc/: Cargo.toml  README.md
crates/storage/: Cargo.toml  README.md
creators/: README.org  analysis.sql  bb.edn  config.edn  deps.edn  justfile  profiles.edn  queries.sql
decisions/: 20251009133634-get-the-message-out.org  20251009144920-python-style-environment-variables.org  20251118100535-mission-over-saas-startup-playbook.org  20251119230950-ci-can-wait.org  20251129175326-clojure-over-rust.org  20251208184623-llms-are-my-colleagues.org  20260212183128-vanilla-js-over-clojurescript-for-bits-js.org  20260214190732-datahike-vs-datomic-for-distributed-coordination-appendix-crypto-shredding.org  20260214190732-datahike-vs-datomic-for-distributed-coordination.org  20260220174238-body-style-indentation-for-ui-component-functions.org  20260304103445-client-side-validation-is-coupled-to-wall-clock-time.org  20260624150000-relicense-agpl-to-busl.org
deploy/: .dockerignore  Dockerfile  README.org  bits-jaeger.container  bits-pgdata.volume  bits-postgres.container  bits-transactor.container  bits.container  bits.network  init-datomic.sql  postgres.container
desktop/: Cargo.toml
dev/: user.clj
docs/: 1password-setup.md  app.org  bits.org  clojure.org  containers.org  dns.org  email.org  forms.org  hetzner.org  implementation-plan.md  js.org  linear.org  operations.org  postgres.org  progress-20250715.md  tenants.org  terraform.org  testing.org
e2e/: auth.spec.ts  browse.spec.ts  purchase.spec.ts  upload.spec.ts
edge/: .gitignore  Cargo.toml  README.md  devenv.nix  fastly.toml
iac/: README.md  backend.tf  bootstrap.sh  variables.tf  versions.tf
libexec/: common.sh
migrations/: 20251100000000_create_users.sql  20251119000000_create_tenants.sql  20251202192405_create_sessions.sql  20251203134000_add_csrf_token_to_sessions.sql  20251203140000_create_email_verification_codes.sql  20251205000000_fix_logins_view.sql  20251205000001_logins_with_verification.sql  20251205161700_auth_attempts.sql  20251210000001_add_fallback_tenant.sql
nix/: ci.nix  nix2container.nix
node/: Cargo.toml
node/.cargo/: config.toml
node/data/: node.db
node/migrations/: 20250116_initial.sql
node/src/: crypto.rs  lib.rs  main.rs
node/src/api/: mod.rs
node/src/blockchain/: mod.rs
node/src/p2p/: discovery.rs  mod.rs  routing.rs  transport.rs
node/src/storage/: mod.rs
node/tests/: p2p_test.rs  storage_test.rs
resources/: logback.xml  otel-agent.properties  tailwind.css
secrets/: database_url_prod.age  master_key_prod.age  secrets.nix
src/: api.rs  config.rs  db.rs  html_tag.rs  lib.rs  main.rs  middleware.rs  tenant.rs
web/: Cargo.toml
web/src/: lib.rs
(+337 files in other folders)
