[workspace]
resolver = "2"
members = [
    "crates/bits-app", "crates/bits-axum-session-sqlx",
    "crates/bits-colo",
    "crates/bits-db",
    "crates/bits-domain",
    "crates/bits-e2e",
    "crates/bits-solo",
]

[workspace.package]
version = "0.1.0"
authors = ["James Conroy-Finn <james@invetica.co.uk>"]
edition = "2021"

[workspace.dependencies]
bits-axum-session-sqlx = { path = "crates/bits-axum-session-sqlx" }
bits-domain = { path = "crates/bits-domain" }
bits-db = { path = "crates/bits-db" }
bits-app = { path = "crates/bits-app" }
bits-solo = { path = "crates/bits-solo" }
bits-colo = { path = "crates/bits-colo" }

anyhow = "1"
axum_session = "0.17.1"
axum_session_auth = "0.17.0"
axum_session_sqlx = { version = "0.6.1", features = ["postgres"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
fake = { version = "4.4", features = ["derive", "chrono"] }
jiff = "0.2"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
subtle = "2.6"
tokio = { version = "1", features = ["sync"] }
toml = "0.9"
tracing = "0.1"
urlencoding = "2.1"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
