[package]
name = "node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "bits"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
blake3.workspace = true
rand.workspace = true
futures.workspace = true
bytes.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# P2P networking
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "kad",
    "gossipsub",
    "mdns",
    "identify",
    "websocket",
    "serde"
] }

# Storage
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Cryptography
argon2 = "0.5"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"

[[bench]]
name = "crypto"
harness = false