[package]
name = "node"
version = "0.1.0"
edition = "2021"
authors = ["Bits Contributors"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "bits"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cryptography
chacha20poly1305 = "0.10"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
blake3 = "1.5"
rand = "0.8"
argon2 = "0.5"

# Utilities
futures = "0.3"
bytes = "1.7"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# P2P networking
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "dns",
    "noise",
    "yamux",
    "kad",
    "gossipsub",
    "mdns",
    "identify",
    "websocket",
    "serde",
    "macros"
] }

# Storage
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Encoding
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"