[package]
name = "bits-app"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
server = ["dioxus/server"]
colo = []

[dependencies]
bits-db.workspace = true
bits-domain.workspace = true
clap.workspace = true
dioxus.workspace = true
dioxus-html = { version = "0.7", features = ["serialize"] }
figment = { version = "0.10", features = ["env"] }
serde.workspace = true
thiserror = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
argon2 = "0.5"
async-trait = "0.1"
axum-core = "0.5"
axum_session.workspace = true
axum_session_auth.workspace = true
axum_session_sqlx.workspace = true
bits-db.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower = "0.5"
tracing.workspace = true

[dev-dependencies]
rstest = "0.23"
