[package]
name = "bits-app"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
server = ["dioxus/server"]
colo = []

[dependencies]
bits-domain.workspace = true
bits-tailwind-merge.workspace = true
clap.workspace = true
dioxus.workspace = true
dioxus-html = { version = "0.7", features = ["serialize"] }
figment = { version = "0.10", features = ["env"] }
fluent-bundle = "0.15"
icu = "2.0"
serde.workspace = true
thiserror = "2"
unic-langid = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-fullstack = "0.7"
gloo-timers = { version = "0.3", features = ["futures"] }
http = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "MouseEvent", "EventTarget", "Window"] }
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
argon2 = "0.5"
async-trait = "0.1"
axum-core = "0.5"
axum_session.workspace = true
axum_session_auth.workspace = true
base64.workspace = true
bits-axum-session-sqlx.workspace = true
bits-db.workspace = true
cookie = "0.18"
jiff = "0.1"
http-body-util = "0.1"
ipnetwork = "0.20"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }
orion = "0.17"
rand.workspace = true
sqlx.workspace = true
subtle.workspace = true
tokio.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["request-id", "timeout", "limit", "cors", "util", "set-header"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding.workspace = true

[dev-dependencies]
rstest = "0.26"
