[package]
name = "bits-colo"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "bits-colo"

[features]
server = ["bits-app/server", "bits-app/colo"]

[dependencies]
bits-domain.workspace = true
bits-app.workspace = true
clap.workspace = true
dioxus.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
axum = "0.8"
axum_session.workspace = true
axum_session_auth.workspace = true
axum_session_sqlx.workspace = true
bits-db.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["full"] }
