[package]
name = "bits-domain"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
garde = { workspace = true, features = ["email"] }
secrecy = { version = "0.10", features = ["serde"] }
serde.workspace = true
thiserror = "2.0"

[dependencies.sqlx]
workspace = true
optional = true

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
sqlx = ["dep:sqlx"]
