[package]
name = "bits-e2e"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "bits-seed"
path = "src/bin/seed.rs"

[features]
default = ["server"]
server = ["bits-solo/server", "bits-colo/server", "bits-app/colo"]

[dependencies]
bits-app.workspace = true
bits-db.workspace = true
bits-solo.workspace = true
bits-colo.workspace = true
anyhow.workspace = true
argon2 = "0.5.3"
axum = "0.8"
fake.workspace = true
jiff.workspace = true
jiff-sqlx = { version = "0.1.1", features = ["postgres"] }
rand.workspace = true
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde.workspace = true
serde_json = "1"
sqlx.workspace = true
tokio.workspace = true
toml.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rstest = "0.26.1"
scraper = "0.22"
urlencoding = "2"
