[package]
name = "bits-e2e"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "bits-seed"
path = "src/bin/seed.rs"

[features]
default = ["server"]
server = ["bits-app/server", "bits/server"]

[dependencies]
bits.workspace = true
bits-app.workspace = true
bits-db.workspace = true
bits-domain = { workspace = true, features = ["sqlx"] }
anyhow.workspace = true
argon2 = "0.5.3"
axum = "0.8"
fake.workspace = true
jiff.workspace = true
jiff-sqlx = { version = "0.1.1", features = ["postgres"] }
rand.workspace = true
reqwest = { version = "0.12", features = ["json", "cookies"] }
scraper = "0.22"
secrecy = "0.10"
serde.workspace = true
serde_json = "1"
sqlx.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rstest = "0.26.1"
urlencoding = "2"
