[package]
name = "bits"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "bits"
path = "src/main.rs"

[features]
default = []
server = ["bits-app/server"]

[dependencies]
bits-domain.workspace = true
bits-app.workspace = true
clap.workspace = true
dioxus.workspace = true
tracing.workspace = true
tower-http = { version = "0.6.7", features = ["set-header"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
axum = "0.8"
axum_session.workspace = true
axum_session_auth.workspace = true
axum_session_sqlx.workspace = true
bits-db.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["full"] }
