[package]
name = "bits-node"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bits"
path = "src/main.rs"

[dependencies]
bits-core = { path = "../core" }
bits-network = { path = "../network" }
bits-consensus = { path = "../consensus" }
bits-identity = { path = "../identity" }
bits-storage = { path = "../storage" }
bits-rpc = { path = "../rpc" }

anyhow.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
serde.workspace = true

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
hex = "0.4"

# Web
axum = { version = "0.7", features = ["tokio"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
serde_json.workspace = true

# Templates
maud = { version = "0.26", features = ["axum"] }

# Encoding
base64 = "0.21"

# Static assets
static-files = "0.2"
mime_guess = "2"

[build-dependencies]
static-files = "0.2"
