[package]
name = "bits-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bits-core = { path = "../core" }

# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
bytes.workspace = true